fixup git home permissions

--- a/templates/default/gitlab.yml.erb
+++ b/templates/default/gitlab.yml.erb
@@ -18,7 +18,7 @@ git_host:
   system: gitolite
   admin_uri: <%= node['gitlab']['git_user'] %>@localhost:gitolite-admin
   base_path: <%= node['gitlab']['git_home'] %>/repositories
-  host: localhost
+  host: <%= node['fqdn'] %> 
   git_user: <%= node['gitlab']['git_user'] %>
   # port: 22
 
