--- a/templates/default/nginx.default.conf.erb
+++ b/templates/default/nginx.default.conf.erb
@@ -14,6 +14,7 @@ upstream unicorn_rails {
 
 server {
     listen       80;
+    client_max_body_size 4G;
     server_name  _;
 
     access_log  /var/log/nginx/<%= node['hostname'] %>.access.log  combined;
