--- a/templates/default/gitlab.yml.erb
+++ b/templates/default/gitlab.yml.erb
@@ -3,6 +3,12 @@
 
 # Gitlab application config file
 
+# Web application specific settings
+web:
+  host: <%= node['fqdn'] %>
+  port: 80
+  https: false
+
 # Email used for notification
 # about new issues, comments
 email:
@@ -12,6 +18,13 @@ email:
   # Protocol used for links in email letters
   # Value can be http or https
   protocol: http # or https
+
+# Application specific settings
+# Like default project limit for user etc
+app:
+  default_projects_limit: 10
+  # backup_path: "/vol/backups"   # default: Rails.root + backups/
+  # backup_keep_time: 604800      # default: 0 (forever) (in seconds)
 
 # Git Hosting congiguration
 git_host:
