Solve conflict with opscode nginx cookbook. Allow side-by-side use of nginx cookbook and gitlab cookbook.

--- a/templates/default/gitlab.yml.erb
+++ b/templates/default/gitlab.yml.erb
@@ -6,7 +6,7 @@
 # Web application specific settings
 web:
   host: <%= @fqdn %>
-  port: <%= @https_boolean ? 443 : 80 %>
+  port: <%= @port %>
   https: <%= @https_boolean %>
 
 # Email used for notification
