--- a/templates/default/nginx.default.conf.erb
+++ b/templates/default/nginx.default.conf.erb
@@ -13,9 +13,8 @@ upstream unicorn_rails {
 }
 
 server {
-    listen       <%= @https_boolean ? 443 : 80 %>;
+    listen       <%= @listen %>;
     client_max_body_size 4G;
-    server_name  _;
     <% if @https_boolean %>
     ssl on;
     ssl_certificate <%= @ssl_certificate %>;
