New gitolite_host attribute

--- a/templates/default/gitlab.yml.erb
+++ b/templates/default/gitlab.yml.erb
@@ -77,7 +77,7 @@ gitolite:
   upload_pack: true
   receive_pack: true
   ssh_user: git
-  ssh_host: localhost
+  ssh_host: <%= @gitolite_host %>
   # ssh_port: 22
   # config_file: gitolite.conf
 # Git settings
