Fix gitolite files

--- a/templates/default/gitlab.yml.erb
+++ b/templates/default/gitlab.yml.erb
@@ -43,3 +43,7 @@ git:
   git_max_size: 5242880 # 5.megabytes
   # Git timeout to read commit, in seconds
   git_timeout: 10
+
+gitolite:
+  hooks_path: /var/git/share/gitolite/hooks/
+  repos_path: /var/git/repositories/
