--- a/templates/default/gitlab.yml.erb
+++ b/templates/default/gitlab.yml.erb
@@ -47,3 +47,4 @@ git:
 gitolite:
   hooks_path: /var/git/share/gitolite/hooks/
   repos_path: /var/git/repositories/
+  admin_uri:  chelsea@localhost:gitolite-admin
