--- a/templates/default/gitlab.yml.erb
+++ b/templates/default/gitlab.yml.erb
@@ -98,15 +98,15 @@ production: &base
 
   ## LDAP settings
   ldap:
-    enabled: false
-    host: '_your_ldap_server'
-    base: '_the_base_where_you_search_for_users'
-    port: 636
-    uid: 'sAMAccountName'
-    method: 'ssl' # "ssl" or "plain"
-    bind_dn: '_the_full_dn_of_the_user_you_will_bind_with'
-    password: '_the_password_of_the_bind_user'
-    allow_username_or_email_login: true
+    enabled: <%= node['gitlab']['ldap']['enabled'] %>
+    host: <%= node['gitlab']['ldap']['host'] %>
+    base: <%= node['gitlab']['ldap']['base'] %>
+    port: <%= node['gitlab']['ldap']['port'] %>
+    uid: <%= node['gitlab']['ldap']['uid'] %>
+    method: <%= node['gitlab']['ldap']['method'] %> # "ssl" or "plain"
+    bind_dn: <%= node['gitlab']['ldap']['bind_dn'] %>
+    password: <%= node['gitlab']['ldap']['password'] %>
+    allow_username_or_email_login: <%= node['gitlab']['ldap']['allow_username_or_email_login'] %>
 
   ## OmniAuth settings
   omniauth:
