Fixed the issue with git clone via ssh when https is used and custom listen port is configured.

--- a/templates/default/shell_config.yml.erb
+++ b/templates/default/shell_config.yml.erb
@@ -2,14 +2,14 @@
 user: <%= node['gitlab']['user'] %>
 
 # Url to gitlab instance. Used for api calls. Should end with a slash.
-gitlab_url: "http://<%= @fqdn %>/" 
+gitlab_url: "<%= node['gitlab']['https'] ? "https" : "http" %>://<%= @fqdn %>:<%= @listen %>/" 
 
 http_settings:
 #  user: someone
 #  password: somepass
 #  ca_file: /etc/ssl/cert.pem
 #  ca_path: /etc/pki/tls/certs
-  self_signed_cert: false
+  self_signed_cert: <%= node['gitlab']['self_signed_cert'] %>
 
 # Repositories path
 # REPOS_PATH MUST NOT BE A SYMLINK!!!
