Fixes for gitlab unicorn_rails process handling.
- Added a more accurate pattern matcher so chef can find the
  unicorn_rails processes instead of finding processes that
  have the 'gitlab' string in them.
- Changed the background call to script/web and script/background_jobs
  in the startup script. These are now foreground calls forcing the start
  script to block until they return (after the processes are up). This
  prevents the chef run from completing before the unicorn_rails processes
  are up.

--- a/templates/default/gitlab.init.erb
+++ b/templates/default/gitlab.init.erb
@@ -168,14 +168,14 @@ start() {
     # Remove old socket if it exists
     rm -f "$socket_path"/gitlab.socket 2>/dev/null
     # Start the web server
-    RAILS_ENV=$RAILS_ENV script/web start &
+    RAILS_ENV=$RAILS_ENV script/web start
   fi
 
   # If sidekiq is already running, don't start it again.
   if [ "$sidekiq_status" = "0" ]; then
     echo "The Sidekiq job dispatcher is already running with pid $spid, not restarting"
   else
-    RAILS_ENV=$RAILS_ENV script/background_jobs start &
+    RAILS_ENV=$RAILS_ENV script/background_jobs start
   fi
 
   # Wait for the pids to be planted
