config updates for gitlab 7.7

--- a/templates/default/database.yml.erb
+++ b/templates/default/database.yml.erb
@@ -4,6 +4,7 @@
 production:
   adapter:  <%= @adapter %>
   encoding: <%= @encoding %>
+  collation: <%= @collation %>
   host:     <%= @host %>
   pool:     <%= @pool %>
   database: <%= @database %>
