fix/add listen unicorn on :8080 (change from 8x)

--- a/templates/default/unicorn.rb.erb
+++ b/templates/default/unicorn.rb.erb
@@ -61,3 +61,4 @@ after_fork do |server, worker|
   defined?(ActiveRecord::Base) and
     ActiveRecord::Base.establish_connection
 end
+listen "127.0.0.1:8080", :tcp_nopush => true
