--- a/templates/default/nginx.gitlab.erb
+++ b/templates/default/nginx.gitlab.erb
@@ -42,8 +42,8 @@ upstream gitlab {
   server unix:<%= @gitlab_app_home %>/tmp/sockets/gitlab.socket fail_timeout=0;
 }
 
-upstream gitlab-git-http-server {
-  server unix:<%= @gitlab_app_home %>/tmp/sockets/gitlab-git-http-server.socket fail_timeout=0;
+upstream gitlab-workhorse {
+  server unix:<%= @gitlab_app_home %>/tmp/sockets/gitlab-workhorse.socket fail_timeout=0;
 }
 
 
@@ -186,7 +186,7 @@ server {
 
     # The following settings only work with NGINX 1.7.11 or newer
     #
-    # # Pass chunked request bodies to gitlab-git-http-server as-is
+    # # Pass chunked request bodies to gitlab-workhorse as-is
     # proxy_request_buffering off;
     # proxy_http_version 1.1;
 
@@ -198,7 +198,7 @@ server {
     proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     #proxy_set_header   X-Forwarded-Proto   $scheme;
     proxy_set_header    X-Forwarded-Proto <%= @https_boolean ? "https" : "http" %>;
-    proxy_pass http://gitlab-git-http-server;
+    proxy_pass http://gitlab-workhorse;
   }
 
   ## Enable gzip compression as per rails guide:
