--- a/templates/default/nginx.gitlab.erb
+++ b/templates/default/nginx.gitlab.erb
@@ -55,7 +55,9 @@ server {
   ## to be served if you visit any address that your server responds to, eg.
   ## the ip address of the server (http://x.x.x.x/)
   listen 80;
+<% if @listen_ipv6 %>
   listen [::]:80 ipv6only=on default_server;
+<% end %>
   return 301 https://$host/$request_uri;
   server_tokens off; ## Don't show the nginx version number, a security best practice
 }
@@ -75,7 +77,9 @@ server {
 
 
   <% if @https_boolean %>
+<% if @listen_ipv6 %>
   listen [::]:443 ipv6only=on default_server;
+<% end %>
 
   ## Strong SSL Security
   ## https://raymii.org/s/tutorials/Strong_SSL_Security_On_nginx.html & https://cipherli.st/
