--- a/templates/default/nginx.gitlab.erb
+++ b/templates/default/nginx.gitlab.erb
@@ -14,54 +14,73 @@
 ## If you change this file in a Merge Request, please also create
 ## a Merge Request on https://gitlab.com/gitlab-org/omnibus-gitlab/merge_requests
 ##
-##################################
-##        CHUNKED TRANSFER      ##
-##################################
-##
-## It is a known issue that Git-over-HTTP requires chunked transfer encoding [0]
-## which is not supported by Nginx < 1.3.9 [1]. As a result, pushing a large object
-## with Git (i.e. a single large file) can lead to a 411 error. In theory you can get
-## around this by tweaking this configuration file and either:
-## - installing an old version of Nginx with the chunkin module [2] compiled in, or
-## - using a newer version of Nginx.
-##
-## At the time of writing we do not know if either of these theoretical solutions works.
-## As a workaround users can use Git over SSH to push large files.
-##
-## [0] https://git.kernel.org/cgit/git/git.git/tree/Documentation/technical/http-protocol.txt#n99
-## [1] https://github.com/agentzh/chunkin-nginx-module#status
-## [2] https://github.com/agentzh/chunkin-nginx-module
-##
 ###################################
 ##         configuration         ##
 ###################################
 ##
 ## See installation.md#using-https for additional HTTPS configuration details.
 
-upstream gitlab {
-  server unix:<%= @gitlab_app_home %>/tmp/sockets/gitlab.socket fail_timeout=0;
-}
-
 upstream gitlab-workhorse {
   server unix:<%= @gitlab_app_home %>/tmp/sockets/gitlab-workhorse.socket fail_timeout=0;
+}
+
+map $http_upgrade $connection_upgrade_gitlab {
+    default upgrade;
+    ''      close;
+}
+
+
+## NGINX 'combined' log format with filtered query strings
+log_format gitlab_access $remote_addr - $remote_user [$time_local] "$request_method $gitlab_filtered_request_uri $server_protocol" $status $body_bytes_sent "$gitlab_filtered_http_referer" "$http_user_agent";
+
+## Remove private_token from the request URI
+# In:  /foo?private_token=unfiltered&authenticity_token=unfiltered&rss_token=unfiltered&...
+# Out: /foo?private_token=[FILTERED]&authenticity_token=unfiltered&rss_token=unfiltered&...
+map $request_uri $gitlab_temp_request_uri_1 {
+  default $request_uri;
+  ~(?i)^(?<start>.*)(?<temp>[\?&]private[\-_]token)=[^&]*(?<rest>.*)$ "$start$temp=[FILTERED]$rest";
+}
+
+## Remove authenticity_token from the request URI
+# In:  /foo?private_token=[FILTERED]&authenticity_token=unfiltered&rss_token=unfiltered&...
+# Out: /foo?private_token=[FILTERED]&authenticity_token=[FILTERED]&rss_token=unfiltered&...
+map $gitlab_temp_request_uri_1 $gitlab_temp_request_uri_2 {
+  default $gitlab_temp_request_uri_1;
+  ~(?i)^(?<start>.*)(?<temp>[\?&]authenticity[\-_]token)=[^&]*(?<rest>.*)$ "$start$temp=[FILTERED]$rest";
+}
+
+## Remove rss_token from the request URI
+# In:  /foo?private_token=[FILTERED]&authenticity_token=[FILTERED]&rss_token=unfiltered&...
+# Out: /foo?private_token=[FILTERED]&authenticity_token=[FILTERED]&rss_token=[FILTERED]&...
+map $gitlab_temp_request_uri_2 $gitlab_filtered_request_uri {
+  default $gitlab_temp_request_uri_2;
+  ~(?i)^(?<start>.*)(?<temp>[\?&]rss[\-_]token)=[^&]*(?<rest>.*)$ "$start$temp=[FILTERED]$rest";
+}
+
+## A version of the referer without the query string
+map $http_referer $gitlab_filtered_http_referer {
+  default $http_referer;
+  ~^(?<temp>.*)\? $temp;
 }
 
 
 <% if @https_boolean %>
 ## Redirects all HTTP traffic to the HTTPS host
 server {
-  ## Either remove "default_server" from the listen line below, 
+  ## Either remove "default_server" from the listen line below,
   ## or delete the /etc/nginx/sites-enabled/default file. This will cause gitlab
   ## to be served if you visit any address that your server responds to, eg.
   ## the ip address of the server (http://x.x.x.x/)
-  listen 80;
+  listen 0.0.0.0:80;
 <% if @listen_ipv6 %>
   listen [::]:80 ipv6only=on default_server;
 <% end %>
-  return 301 https://$host/$request_uri;
+  server_name <%= @server_name %>;
   server_tokens off; ## Don't show the nginx version number, a security best practice
+  return 301 https://$http_host$request_uri;
+  access_log  /var/log/nginx/<%= @hostname %>_access.log gitlab_access;
+  error_log   /var/log/nginx/<%= @hostname %>_error.log;
 }
-
 <% end %>
 
 ## HTTPS host
@@ -69,14 +88,8 @@ server {
   listen <%= @listen %>;
   server_name <%= @server_name %>;
   server_tokens off; ## Don't show the nginx version number, a security best practice
-  root <%= @gitlab_app_home %>/public;
 
-  ## Increase this if you want to upload large attachments
-  ## Or if you want to accept large git objects over http
-  client_max_body_size 4G;
-
-
-  <% if @https_boolean %>
+<% if @https_boolean %>
 <% if @listen_ipv6 %>
   listen [::]:443 ipv6only=on default_server;
 <% end %>
@@ -92,7 +105,6 @@ server {
   ssl_prefer_server_ciphers on;
   ssl_session_cache shared:SSL:10m;
   ssl_session_timeout 5m;
-  <% end %>
 
   ## See app/controllers/application_controller.rb for headers set
 
@@ -112,20 +124,23 @@ server {
   ##
   # ssl_dhparam /etc/ssl/certs/dhparam.pem;
 
+  ## [Optional] Enable HTTP Strict Transport Security
+  # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
+<% end %>
+
+  ## Real IP Module Config
+  ## http://nginx.org/en/docs/http/ngx_http_realip_module.html
+  real_ip_header X-Real-IP; ## X-Real-IP or X-Forwarded-For or proxy_protocol
+  real_ip_recursive off;    ## If you enable 'on'
+  ## If you have a trusted IP address, uncomment it and set it
+  # set_real_ip_from YOUR_TRUSTED_ADDRESS; ## Replace this with something like 192.168.1.0/24
+
   ## Individual nginx logs for this GitLab vhost
   access_log  /var/log/nginx/<%= @hostname %>_access.log;
   error_log  /var/log/nginx/<%= @hostname %>_error.log;
 
   location / {
-    ## Serve static files from defined root folder.
-    ## @gitlab is a named location for the upstream fallback, see below.
-    try_files $uri $uri/index.html $uri.html @gitlab;
-  }
-
-  ## We route uploads through GitLab to prevent XSS and enforce access control.
-  location /uploads/ {
-    ## If you use HTTPS make sure you disable gzip compression
-    ## to be safe against BREACH attack.
+    client_max_body_size 0;
     gzip off;
 
     ## https://github.com/gitlabhq/gitlabhq/issues/694
@@ -134,32 +149,7 @@ server {
     proxy_connect_timeout   300;
     proxy_redirect          off;
 
-    proxy_set_header    Host                $http_host;
-    proxy_set_header    X-Real-IP           $remote_addr;
-<% if @https_boolean %>
-    proxy_set_header    X-Forwarded-Ssl     on;
-<% end %>
-    proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-    #proxy_set_header   X-Forwarded-Proto   $scheme;
-    proxy_set_header    X-Forwarded-Proto <%= @https_boolean ? "https" : "http" %>;
-    proxy_set_header    X-Frame-Options     SAMEORIGIN;
-
-    proxy_pass http://gitlab;
-  }
-
-
-  ## If a file, which is not found in the root folder is requested,
-  ## then the proxy passes the request to the upsteam (gitlab unicorn).
-  location @gitlab {
-    ## If you use HTTPS make sure you disable gzip compression
-    ## to be safe against BREACH attack.
-    gzip off;
-
-    ## https://github.com/gitlabhq/gitlabhq/issues/694
-    ## Some requests take more than 30 seconds.
-    proxy_read_timeout      300;
-    proxy_connect_timeout   300;
-    proxy_redirect          off;
+    proxy_http_version 1.1;
 
     proxy_set_header    Host                $http_host;
     proxy_set_header    X-Real-IP           $remote_addr;
@@ -167,62 +157,20 @@ server {
     proxy_set_header    X-Forwarded-Ssl     on;
 <% end %>
     proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-    #proxy_set_header   X-Forwarded-Proto   $scheme;
-    proxy_set_header    X-Forwarded-Proto <%= @https_boolean ? "https" : "http" %>;
-    proxy_set_header    X-Frame-Options     SAMEORIGIN;
+    proxy_set_header    X-Forwarded-Proto   <%= @https_boolean ? "https" : "http" %>;
+    proxy_set_header    Upgrade             $http_upgrade;
+    proxy_set_header    Connection          $connection_upgrade_gitlab;
 
-    proxy_pass http://gitlab;
-  }
-
-  location ~ [-\/\w\.]+\.git\/ {
-    ## If you use HTTPS make sure you disable gzip compression
-    ## to be safe against BREACH attack.
-    gzip off;
-
-    ## https://github.com/gitlabhq/gitlabhq/issues/694
-    ## Some requests take more than 30 seconds.
-    proxy_read_timeout      300;
-    proxy_connect_timeout   300;
-    proxy_redirect          off;
-
-    # Do not buffer Git HTTP responses
-    proxy_buffering off;
-
-    # The following settings only work with NGINX 1.7.11 or newer
-    #
-    # # Pass chunked request bodies to gitlab-workhorse as-is
-    # proxy_request_buffering off;
-    # proxy_http_version 1.1;
-
-    proxy_set_header    Host                $http_host;
-    proxy_set_header    X-Real-IP           $remote_addr;
-<% if @https_boolean %>
-    proxy_set_header    X-Forwarded-Ssl     on;
-<% end %>
-    proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-    #proxy_set_header   X-Forwarded-Proto   $scheme;
-    proxy_set_header    X-Forwarded-Proto <%= @https_boolean ? "https" : "http" %>;
     proxy_pass http://gitlab-workhorse;
   }
 
-  ## Enable gzip compression as per rails guide:
-  ## http://guides.rubyonrails.org/asset_pipeline.html#gzip-compression
-  ## WARNING: If you are using relative urls remove the block below
-  ## See config/application.rb under "Relative url support" for the list of
-  ## other files that need to be changed for relative url support
-  location ~ ^/(assets)/ {
-    root <%= @gitlab_app_home %>/public;
-    gzip_static on; # to serve pre-gzipped version
-    expires max;
-    add_header Cache-Control public;
-  }
-
+  error_page 404 /404.html;
+  error_page 422 /422.html;
+  error_page 500 /500.html;
   error_page 502 /502.html;
-
-  # GITLAB COOKBOOK PRIOR 8.x ERROR PAGE SPEC.
-  ## Rails error pages
-  #error_page 500 502 503 504 /500.html;
-  #location = /500.html {
-  #  root <%= @gitlab_app_home %>/public;
-  #}
+  error_page 503 /503.html;
+  location ~ ^/(404|422|500|502|503)\.html$ {
+    root <%= @gitlab_app_home %>/public;
+    internal;
+  }
 }
