--- a/templates/default/shell_config.yml.erb
+++ b/templates/default/shell_config.yml.erb
@@ -1,37 +1,53 @@
 # GitLab user. git by default
 user: <%= node['gitlab']['user'] %>
 
-# Url to gitlab instance. Used for api calls. Should end with a slash.
-gitlab_url: "<%= node['gitlab']['https'] ? "https" : "http" %>://<%= @fqdn %>:<%= @listen_port %>/" 
+# URL to GitLab instance, used for API calls. Default: http://localhost:8080.
+# For relative URL support read http://doc.gitlab.com/ce/install/relative_url.html
+# You only have to change the default if you have configured Unicorn
+# to listen on a custom port, or if you have configured Unicorn to
+# only listen on a Unix domain socket. For Unix domain sockets use
+# "http+unix://<urlquoted-path-to-socket>", e.g.
+# "http+unix://%2Fpath%2Fto%2Fsocket"
+gitlab_url: "http+unix://<%= URI.encode_www_form_component node['gitlab']['home'] + '/gitlab/tmp/sockets/gitlab.socket' %>"
 
+# See installation.md#using-https for additional HTTPS configuration details.
 http_settings:
+#  read_timeout: 300
 #  user: someone
 #  password: somepass
 #  ca_file: /etc/ssl/cert.pem
 #  ca_path: /etc/pki/tls/certs
   self_signed_cert: <%= node['gitlab']['self_signed_cert'] %>
 
-# Repositories path
-# REPOS_PATH MUST NOT BE A SYMLINK!!!
-repos_path: <%= node['gitlab']['home'] + "/repositories" %>
-
 # File used as authorized_keys for gitlab user
-auth_file: <%= node['gitlab']['home'] + "/.ssh/authorized_keys"%>
+auth_file: <%= node['gitlab']['home'] %>/.ssh/authorized_keys
 
-# Redis settings used for pushing commit notices to gitlab
-redis:
-  bin: <%= node['redisio']['bin_path'] %>/redis-cli
-  socket: <%= @redis_socket %>
-  namespace: resque:gitlab
+# File that contains the secret key for verifying access to GitLab.
+# Default is .gitlab_shell_secret in the gitlab-shell directory.
+# secret_file: <%= node['gitlab']['home'] %>/gitlab-shell/.gitlab_shell_secret
+
+# Parent directory for global custom hook directories (pre-receive.d, update.d, post-receive.d)
+# Default is hooks in the gitlab-shell directory.
+# custom_hooks_dir: <%= node['gitlab']['home'] %>/gitlab-shell/hooks
 
 # Log file.
 # Default is gitlab-shell.log in the root directory.
-# log_file: "/home/git/gitlab-shell/gitlab-shell.log"
+# log_file: <%= node['gitlab']['home'] %>/gitlab-shell/gitlab-shell.log
 
 # Log level. INFO by default
 log_level: INFO
+
+# Log format. 'text' by default
+# log_format: json
 
 # Audit usernames.
 # Set to true to see real usernames in the logs instead of key ids, which is easier to follow, but
 # incurs an extra API call on every gitlab-shell command.
 audit_usernames: false
+
+# Git trace log file.
+# If set, git commands receive GIT_TRACE* environment variables
+# See https://git-scm.com/book/es/v2/Git-Internals-Environment-Variables#Debugging for documentation
+# An absolute path starting with / – the trace output will be appended to that file.
+# It needs to exist so we can check permissions and avoid to throwing warnings to the users.
+git_trace_log_file:
